screens/HomeScreen/Override.css
#pf1 {
  transform-origin: 0 0;
  transform: scale(1.5);
  position: absolute;
  left: 100px;
  top: 0px;
}
#pf2 {
  transform-origin: 0 0;
  transform: scale(1.5);
  position: absolute;
  left: 100px;
  top: 1000px;
}
#pf3 {
  transform-origin: 0 0;
  transform: scale(1.5);
  position: absolute;
  left: 100px;
  top: 2000px;
}
#pf4 {
  transform-origin: 0 0;
  transform: scale(1.5);
  position: absolute;
  left: 100px;
  top: 3000px;
}

.x0 {
  z-index: -1;
}

#PieChart0Container {
  position: absolute;
  left: 25px;
  top: 340px;
  width: 1200px;
  height: 500px;
  background-color: white;
  transform-origin: 0 0;
  transform: scale(0.25);
}

#PieChart0 {
  width: 1000px;
  height: 500px;
}

#PieChart1Container {
  position: absolute;
  left: 15px;
  top: 500px;
  transform-origin: 0 0;
  transform: scale(0.2);
  width: 880px;
  height: 600px;
  background-color: white;
}

#PieChart1 {
  width: 960px;
  height: 500px;
}

#PieChart2Container {
  position: absolute;
  left: 201px;
  top: 500px;
  transform-origin: 0 0;
  transform: scale(0.2);
  width: 880px;
  height: 600px;
  background-color: white;
}

#PieChart2 {
  width: 960px;
  height: 500px;
}

#Speedometer0Container {
  position: absolute;
  left: 410px;
  top: 430px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 1020px;
  height: 585px;
}

#Speedometer0 {
  width: 700px;
  height: 500px;
  padding-top: 60px;
}

#Speedometer1Container {
  position: absolute;
  left: 25px;
  top: 175px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 800px;
  height: 700px;
}

#Speedometer1 {
  width: 600px;
  height: 500px;
  padding-left: 70px;
  padding-top: 150px;
}

#Speedometer2Container {
  position: absolute;
  left: 200px;
  top: 175px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 770px;
  height: 700px;
}

#Speedometer2 {
  width: 600px;
  height: 500px;
  padding-left: 70px;
  padding-top: 150px;
}

#Speedometer3Container {
  position: absolute;
  left: 25px;
  top: 415px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 1440px;
  height: 500px;
}

#Speedometer3 {
  width: 700px;
  height: 500px;
  padding-top: 120px;
}

#Speedometer4Container {
  position: absolute;
  left: 410px;
  top: 61px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 1440px;
  height: 500px;
}

#Speedometer4 {
  width: 700px;
  height: 600px;
}

#Speedometer5Container {
  position: absolute;
  left: 410px;
  top: 240px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 1440px;
  height: 700px;
}

#Speedometer5 {
  width: 700px;
  height: 500px;
  padding-top: 60px;
}

#BarChart0Container {
  position: absolute;
  left: 410px;
  top: 470px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 1440px;
  height: 1000px;
}

#BarChart0 {
  width: 1000px;
  height: 1100px;
  padding-left: 520px;
  padding-top: 120px;
}

#BarChart1Container {
  position: absolute;
  left: 25px;
  top: 58px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 1440px;
  height: 500px;
}

#BarChart1 {
  width: 980px;
  height: 500px;
  padding-left: 490px;
  padding-top: 130px;
}

#BarChart2Container {
  position: absolute;
  left: 25px;
  top: 218px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 1440px;
  height: 600px;
}

#BarChart2 {
  width: 980px;
  height: 500px;
  padding-left: 490px;
  padding-top: 140px;
}

#RadarChart0Container {
  position: absolute;
  left: 25px;
  top: 280px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 1440px;
  height: 1350px;
}

#RadarChart0 {
  width: 700px;
  height: 700px;
  padding-left: 660px;
  padding-top: 420px;
}

#Speedometer6Container {
  position: absolute;
  left: 400px;
  top: 130px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 760px;
  height: 600px;
}

#Speedometer6 {
  width: 700px;
  height: 500px;
  padding-top: 10px;
}

#Speedometer7Container {
  position: absolute;
  left: 590px;
  top: 130px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 700px;
  height: 600px;
}

#Speedometer7 {
  width: 700px;
  height: 500px;
  padding-top: 10px;
}

#BarChart3Container {
  position: absolute;
  left: 410px;
  top: 402px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 1455px;
  height: 1000px;
}

#BarChart3 {
  width: 950px;
  height: 1100px;
  padding-left: 550px;
  padding-top: 150px;
}

#BarChart4Container {
  position: absolute;
  left: 25px;
  top: 56px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 1440px;
  height: 600px;
}

#BarChart4 {
  width: 980px;
  height: 500px;
  padding-left: 510px;
  padding-top: 155px;
}

#BarChart5Container {
  position: absolute;
  left: 0px;
  top: 230px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 1510px;
  height: 600px;
}

#BarChart5 {
  width: 1550px;
  height: 500px;
  padding-left: 0px;
  padding-top: 300px;
}

#BarChart6Container {
  position: absolute;
  left: 0px;
  top: 425px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 1510px;
  height: 700px;
}

#BarChart6 {
  width: 1550px;
  height: 500px;
  padding-left: 0px;
  padding-top: 300px;
}

#RadarChart1Container {
  position: absolute;
  left: 410px;
  top: 180px;
  transform-origin: 0 0;
  transform: scale(0.25);
  background-color: white;
  width: 1440px;
  height: 1250px;
}

#RadarChart1 {
  width: 1200px;
  height: 1200px;
  padding-left: 90px;
  /* padding-top: 220px; */
}

#PieChart0ExtraContainer0 {
  position: absolute;
  left: 107px;
  top: 270px;
  width: 279px;
  height: 50px;
  background-color: white;
  z-index: 10;
}

#PieChart0ExtraContainer1 {
  position: absolute;
  left: 27px;
  top: 272px;
  width: 359px;
  height: 50px;
  background-color: white;
  z-index: 10;
}

#PieChart0ExtraContainer2 {
  position: absolute;
  left: 259px;
  top: 342px;
  width: 120px;
  height: 50px;
  background-color: white;
  z-index: 10;
}

#Speedometer0ExtraContainer0 {
  position: absolute;
  left: 565px;
  top: 430px;
  width: 80px;
  height: 70px;
  visibility: hidden;
}

#Speedometer0ExtraContainer1 {
  position: absolute;
  left: 770px;
  top: 30px;
  width: 80px;
  height: 70px;
  background-color: white;
}

#Speedometer0ExtraContainer2 {
  position: absolute;
  left: 407px;
  top: 30px;
  width: 363px;
  height: 302px;
  background-color: rgb(245, 239, 228)
}

#Speedometer0ExtraContainer3 {
  position: absolute;
  left: 605px;
  top: 430px;
  width: 169px;
  background-color: white;
  z-index: 10;
}

#Speedometer0ExtraContainer4 {
  position: absolute;
  left: 505px;
  top: 355px;
  width: 169px;
}

#Speedometer1ExtraContainer0 {
  position: absolute;
  left: 178px;
  top: 190px;
  width: 80px;
  height: 70px;
  visibility: hidden;
}

#Speedometer3ExtraContainer0 {
  position: absolute;
  left: 295px;
  top: 420px;
  width: 80px;
  height: 70px;
  visibility: hidden;
}

#Speedometer3ExtraContainer1 {
  position: absolute;
  left: 213px;
  top: 430px;
  width: 180px;
  height: 150px;
  background-color: white;
  z-index: 10;
}

#Speedometer4ExtraContainer0 {
  position: absolute;
  left: 577px;
  top: 65px;
  width: 80px;
  height: 70px;
  visibility: hidden;
}

#Speedometer4ExtraContainer1 {
  position: absolute;
  left: 411px;
  top: 57px;
  width: 190px;
  height: 3px;
  background-color: rgb(245, 239, 228);
}

#Speedometer4ExtraContainer2 {
  position: absolute;
  left: 611px;
  top: 67px;
  width: 150px;
  background-color: white;
  z-index: 10;
}

#Speedometer5ExtraContainer0 {
  position: absolute;
  left: 560px;
  top: 250px;
  width: 80px;
  height: 70px;
  visibility: hidden;
}

#Speedometer5ExtraContainer1 {
  position: absolute;
  left: 590px;
  top: 255px;
  width: 170px;
  background-color: white;
  z-index: 10;
  height: 150px;
}

#BarChart0ExtraContainer0 {
  position: absolute;
  left: 425px;
  top: 562px;
  width: 80px;
  height: 70px;
  visibility: hidden;
}

#BarChart0ExtraContainer1 {
  position: absolute;
  left: 423px;
  top: 475px;
  width: 150px;
  z-index: 10;
  background-color: white;
}

#BarChart1ExtraContainer0 {
  position: absolute;
  left: 25px;
  top: 167px;
  width: 80px;
  height: 70px;
  visibility: hidden;
}

#BarChart1ExtraContainer1 {
  position: absolute;
  left: 25px;
  top: 70px;
  width: 150px;
  z-index: 10;
  background-color: white;
}


#BarChart2ExtraContainer0 {
  position: absolute;
  left: 25px;
  top: 333px;
  width: 80px;
  height: 70px;
  visibility: hidden;
}

#BarChart2ExtraContainer1 {
  position: absolute;
  left: 25px;
  top: 233px;
  width: 150px;
  height: 70px;
  z-index: 10;
  background-color: white
}

#RadarChart0ExtraContainer0 {
  position: absolute;
  left: 25px;
  top: 570px;
  width: 80px;
  height: 70px;
  visibility: hidden;
}

#RadarChart0ExtraContainer1 {
  position: absolute;
  left: 27px;
  top: 390px;
  width: 160px;
  z-index: 10;
  background-color: white;
}

#Speedometer6ExtraContainer0 {
  position: absolute;
  left: 535px;
  top: 127px;
  width: 80px;
  height: 70px;
  visibility: hidden;
}

#Speedometer6ExtraContainer1 {
  position: absolute;
  left: 415px;
  top: 260px;
  width: 180px;
  background-color: white;
  z-index: 10;
}

#Speedometer6ExtraContainer2 {
  position: absolute;
  left: 408px;
  top: 10px;
  width: 360px;
  height: 96px;
  background-color: white;
  z-index: 10;
}

#Speedometer7ExtraContainer0 {
  position: absolute;
  left: 605px;
  top: 260px;
  width: 160px;
  background-color: white;
  z-index: 10;
}

#BarChart3ExtraContainer0 {
  position: absolute;
  left: 425px;
  top: 502px;
  width: 80px;
  height: 70px;
  visibility: hidden;
}

#BarChart3ExtraContainer1 {
  position: absolute;
  left: 423px;
  top: 412px;
  width: 150px;
  z-index: 10;
  background-color: white;
}

#BarChart4ExtraContainer0 {
  position: absolute;
  left: 25px;
  top: 182px;
  width: 80px;
  height: 70px;
  visibility: hidden;
}

#BarChart4ExtraContainer1 {
  position: absolute;
  left: 29px;
  top: 60px;
  width: 150px;
  background-color: white;
  z-index: 10;
}

#BarChart5ExtraContainer0 {
  position: absolute;
  left: 25px;
  top: 362px;
  width: 80px;
  height: 70px;
  visibility: hidden;
}

#BarChart5ExtraContainer1 {
  position: absolute;
  left: 26px;
  top: 240px;
  width: 310px;
  background-color: white;
  z-index: 10;
}

#BarChart6ExtraContainer0 {
  position: absolute;
  left: 25px;
  top: 562px;
  width: 80px;
  height: 70px;
  visibility: hidden;
}

#BarChart6ExtraContainer1 {
  position: absolute;
  left: 23px;
  top: 422px;
  width: 370px;
  height: 5px;
  background-color: white;
}

#BarChart6ExtraContainer2 {
  position: absolute;
  left: 26px;
  top: 428px;
  width: 330px;
  background-color: white;
  z-index: 10;
  height: 50px;
}

#RadarChart1ExtraContainer0 {
  position: absolute;
  left: 425px;
  top: 482px;
  width: 80px;
  height: 70px;
  visibility: hidden;
}

#RadarChart1ExtraContainer1 {
  position: absolute;
  left: 422px;
  top: 62px;
  width: 350px;
  z-index: 20;
  background-color: white;
}

